adicionando img e estilos

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div id="page">
-        <img src="" alt="">
+        <img src="assets/main-image.png" alt="Cupcake de café com chantilly">
         <main>
             <section id="about"></section>
             <h1>Cupcake de café com chantilly</h1>
