--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
                 Para a montagem, faça um furo no centro dos cupcakes e recheie com o brigadeiro de café reservado. Decore as superfícies dos cupcakes com o chantilly reservado, fazendo círculos. Decore com grãos de café e leve à geladeira até o momento de servir.</p>
         </main>
     </div>
-    
+     <footer>
+        desenvolvido por K
+     </footer>
 </body>
 </html>
