--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </main>
     </div>
      <footer>
-        desenvolvido por K
+        desenvolvido por KleberAr4uj0
      </footer>
 </body>
 </html>
